[tool.poetry]
name = "open-reference"
version = "0.1.0"
description = ""
authors = ["8baller <8ball030@gmail.com>"]
readme = "README.md"
packages = [{include = "open_reference"}]

[tool.poetry.dependencies]
python = "^3.8"
sqlacodegen = "^2.3.0.post1"
requests = "^2.28.2"
click = "^8.1.3"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
