[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["8baller <8ball030@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2"
django-admin = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
